Fix text-overflow: ellipsis on recipe title

--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,9 @@ main {
   font-weight: 500;
   padding-top: 2px;
   padding-bottom: 5px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .restaurant-menu__recipe {
   display: inline-block;
@@ -281,6 +284,9 @@ main {
 }
 .restaurant-menu-entree-container {
   cursor: pointer;
+}
+.restaurant-menu-entree-container:active > h3 {
+  animation: moveTitle 500ms forwards;
 }
 .restaurant-menu-entree-container:active + .restaurant-menu-take {
   animation: takeDish 500ms forwards;
@@ -367,6 +373,14 @@ main {
       width: 220px;
     }
   }
+  @keyframes moveTitle {
+    0% {
+      width: 80%;
+    }
+    100% {
+      width: 70%;
+    }
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   @keyframes takeDish {
@@ -405,6 +419,14 @@ main {
     }
     100% {
       transform: translateX(0px);
+    }
+  }
+  @keyframes moveTitle {
+    0% {
+      width: 80%;
+    }
+    100% {
+      width: 70%;
     }
   }
 }
